--- a/ui/src/app/pipelines/dialog/import-pipeline/import-pipeline-dialog.component.scss
+++ b/ui/src/app/pipelines/dialog/import-pipeline/import-pipeline-dialog.component.scss
@@ -16,17 +16,4 @@
  *
  */
 
-import {PipelineDetailsController} from "./pipeline-details.controller";
-
-declare const require: any;
-
-export let PipelineDetailsComponent = {
-    template: require('./pipeline-details.tmpl.html'),
-    bindings: {
-        pipelines: "=",
-        refreshPipelines: "&",
-        activeCategory: "<"
-    },
-    controller: PipelineDetailsController,
-    controllerAs: 'ctrl'
-};
+@import '../../../../scss/sp/sp-dialog.scss';
