--- a/ui/src/app/pipeline-details/components/elements/pipeline-elements-row.component.html
+++ b/ui/src/app/pipeline-details/components/elements/pipeline-elements-row.component.html
@@ -16,24 +16,16 @@
   ~
   -->
 
-<div>
-    <div class="assembly-options-preview sp-blue-bg">
-        <div layout="row" layout-align="start center">
-            <h4>Element Details</h4>
+<div fxFlex="100" fxLayout="column">
+    <div fxLayout="row" fxFlex="100">
+        <div fxFlex="30" fxLayout="row" style="margin-bottom:10px;">
+            <span class="draggable-icon {{elementType}}">
+                <pipeline-element [preview]="true" [pipelineElement]="_element"></pipeline-element>
+            </span>
         </div>
-    </div>
-    <div class="sp-blue-border" style="max-height: 800px;overflow:auto;">
-        <div ng-if="ctrl.selectedElement != ''">
-            <div layout="column" style="padding:5px;padding-left:10px;">
-                <pipeline-elements-row pipeline="ctrl.pipeline" element="ctrl.selectedElement"></pipeline-elements-row>
-
-                <md-divider/>
-                <div style="margin-bottom:15px;"></div>
-
-            </div>
-        </div>
-        <div layout="column" layout-align="center center" ng-if="ctrl.selectedElement == ''">
-            (select an element in the preview window to see details)
+        <div fxFlex="70" fxLayout="column" fxLayoutAlign="center left">
+            <b>{{element.name}}</b>
+            {{element.description}}
         </div>
     </div>
 </div>
