--- a/ui/src/app/pipeline-details/components/status/pipeline-status.component.html
+++ b/ui/src/app/pipeline-details/components/status/pipeline-status.component.html
@@ -17,28 +17,28 @@
   -->
 
 <div class="assembly-options-preview sp-blue-bg">
-    <div layout="row" layout-align="start center">
+    <div fxLayout="row" fxLayoutAlign="start center">
         <h4>Pipeline Status</h4>
     </div>
 </div>
 <div class="sp-blue-border">
-    <div layout="column" style="min-height:100px; padding:5px;padding-left:15px;" ng-if="ctrl.pipelineStatus.length > 0">
-        <div layout="row" flex="100">
-            <div flex="20"><h5><b>Date</b></h5></div>
-            <div flex="20"><h5><b>Status</b></h5></div>
-            <div flex="60"><h5><b>Description</b></h5></div>
-            <div flex="60"><h5><b>Details</b></h5></div>
+    <div fxLayout="column" style="min-height:100px; padding:5px;padding-left:15px;" *ngIf="pipelineStatus.length > 0">
+        <div fxLayout="row" fxFlex="100">
+            <div fxFlex="20"><h5><b>Date</b></h5></div>
+            <div fxFlex="20"><h5><b>Status</b></h5></div>
+            <div fxFlex="60"><h5><b>Description</b></h5></div>
+            <div fxFlex="60"><h5><b>Details</b></h5></div>
         </div>
-        <div flex="100" layout="column" ng-repeat="status in ctrl.pipelineStatus | orderBy: 'timestamp':true">
-            <div flex="100" layout="row">
-                <div flex="20"><h5>{{status.timestamp | date:'dd.MM.yyyy HH:mm'}}</h5></div>
-                <div flex="20"><h5>{{status.messageType}}</h5></div>
-                <div flex="60"><h5>{{status.message}}</h5></div>
-                <div flex="60"><h5>-</h5></div>
+        <div fxFlex="100" fxLayout="column" *ngFor="let status of pipelineStatus">
+            <div fxFlex="100" fxLayout="row">
+                <div fxFlex="20"><h5>{{status.timestamp | date:'dd.MM.yyyy HH:mm'}}</h5></div>
+                <div fxFlex="20"><h5>{{status.messageType}}</h5></div>
+                <div fxFlex="60"><h5>{{status.message}}</h5></div>
+                <div fxFlex="60"><h5>-</h5></div>
             </div>
         </div>
     </div>
-    <div layout="column" layout-align="center center" style="min-height:100px; padding:5px;padding-left:15px;" ng-if="ctrl.pipelineStatus.length==0">
+    <div fxLayout="column"fxLayoutAlign="center center" style="min-height:100px; padding:5px;padding-left:15px;" *ngIf="pipelineStatus.length==0">
         (no status information available)
     </div>
 </div>
