--- a/ui/src/app/core-ui/dialog/confirm-dialog/confirm-dialog.component.html
+++ b/ui/src/app/core-ui/dialog/confirm-dialog/confirm-dialog.component.html
@@ -4,7 +4,7 @@
         <h5>{{data.subtitle}}</h5>
     </div>
     <div fxFlex="100" fxLayoutAlign="end center" class="footer">
-        <button mat-button (click)="onCancel()">No</button>
-        <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Yes</button>
+        <button mat-button (click)="onCancel()" *ngIf="data.confirmAndCancel">{{data.cancelTitle}}</button>
+        <button mat-button [mat-dialog-close]="true" cdkFocusInitial>{{data.okTitle}}</button>
     </div>
 </div>
