Fix column selection in table view

--- a/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
@@ -21,7 +21,7 @@
 
         <div fxFlex="100" layout="row" fxLayoutAlign="end center" style="margin-left: 0px;margin-right: 0px;">
             <sp-select-properties
-                    label="Select Columns"
+                    label="Select Properties"
                     multiple = true
                     style="margin-right: 10px;"
                     (changeSelectedProperties)="setSelectedColumn($event)"
