Working on add transformation rule

--- a/ui/src/app/connect/dialog/edit-event-property/components/edit-event-property-primitive/edit-event-property-primitive.component.html
+++ b/ui/src/app/connect/dialog/edit-event-property/components/edit-event-property-primitive/edit-event-property-primitive.component.html
@@ -34,9 +34,11 @@
             [showUnitTransformation]="!hideUnitTransformation">
     </sp-edit-unit-transformation>
 
-    <mat-form-field *ngIf="staticValueAddedByUser()" class="doubleWidth">
-        <input matInput placeholder="Static Value" name="static_value" id="static_value"
-            [(ngModel)]="cachedProperty.staticValue">
-    </mat-form-field>
+    <div fxLayout="row" fxLayoutAlign="start" *ngIf="addedByUser">
+        <mat-form-field  class="doubleWidth">
+            <input matInput placeholder="Static Value" name="static_value" id="static_value"
+                [(ngModel)]="cachedProperty.staticValue">
+        </mat-form-field>
+    </div>
 
 </div>
