[hotfix] consolidated consul config and service registration

--- a/streampipes-wrapper-python/streampipes/api/templates/index.html
+++ b/streampipes-wrapper-python/streampipes/api/templates/index.html
@@ -24,7 +24,7 @@
     </h4>
             {% for processor in processors %}
             <h3>{{ processor.name }}</h3>
-            <h4>URI: {{ processor.uri }}</h4>
+            <h4>URI: <a href="{{ processor.uri }}">{{ processor.uri }}</a></h4>
             <h4>Description: {{ processor.description }}</h4>
             {% endfor %}
 </div>
