--- a/ui/src/app/connect/new-adapter/component/runtime-info/pipeline-element-runtime-info.component.html
+++ b/ui/src/app/connect/new-adapter/component/runtime-info/pipeline-element-runtime-info.component.html
@@ -38,7 +38,7 @@
         <tbody id="preview-data-rows-id">
         <tr *ngFor="let property of streamDescription.eventSchema.eventProperties">
             <td>{{property.runtimeName}}</td>
-            <td *ngIf="isImage(property)"> <img src="data:image/png;base64,{{runtimeData[property.properties.runtimeName]}}" style="max-width: 150px;" /> </td>
+            <td *ngIf="isImage(property)"> <img src="data:image/png;base64,{{runtimeData[property.runtimeName]}}" style="max-width: 150px;" /> </td>
             <td *ngIf="isTimestamp(property)">{{runtimeData[property.runtimeName] | date:'yyyy-MM-dd HH:mm:ss '}}</td>
             <td *ngIf="hasNoDomainProperty(property)">{{runtimeData[property.runtimeName]}}</td>
         </tr>
